Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12595

Switching between views focuses file in qrc file instead of in the project folder

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.3.0-beta1
    • Qt Creator 3.1.2
    • None
    • QtCreator 3.1.2 based on Qt 5.3.1 running on Linux Mint 16

      In my project I dynamically create the .qrc file based on which .qml files are part of the project like so

      RESOURCE_CONTENT = \
          "<RCC>" \
          "<qresource prefix=\"/\">"
      for(resourcefile, INCLUDED_RESOURCE_FILES) {
          resourcefileabsolutepath = $$absolute_path($$resourcefile)
          relativepath_in = $$relative_path($$resourcefileabsolutepath, $$PWD)
          relativepath_out = $$relative_path($$resourcefileabsolutepath, $$OUT_PWD)
          RESOURCE_CONTENT += "<file alias=\"$$relativepath_in\">$$relativepath_out</file>"
      }
      RESOURCE_CONTENT += \
          "</qresource>" \
          "</RCC>"
      
      write_file($$GENERATED_RESOURCE_FILE, RESOURCE_CONTENT)
      

      I use QtCreator in split side-by-side mode. When switching between views, Qt Creator highlights the currently opened file in the projects list.

      Starting in Qt Creator 3.1 it does no longer highlight the file in the project tree (like Foo/bar/QML/qml/main.qml) but the one in the resource file Foo/bar/Resource files/app.qrc/../../Foo/qml/main.qml which is highly distracting, especially since it always expands this huge list of uncategorized files.

        For Gerrit Dashboard: QTCREATORBUG-12595
        # Subject Branch Project Status CR V

            dt Daniel Teske
            broulik Kai Uwe Broulik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes