src/plugins/projectexplorer/session.h
@@ -116,6 +116,7 @@ public:
     static SessionNode *sessionNode();
 
     static Project *projectForNode(ProjectExplorer::Node *node);
+    static QList<Node *> nodesForFile(const QString &fileName, Project *project = 0);
     static Node *nodeForFile(const QString &fileName, Project *project = 0);
     static Project *projectForFile(const QString &fileName);
 
